# ParserLR1

./: .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: deploy-ec2-compose-ghcr.yml  deploy-ec2.yml
deploy/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
lr1_app/: vercel.json
lr1_app/backend/: main.py  models.py  requirements.txt
lr1_app/backend/app/: main.py  models.py
lr1_app/backend/app/lex/: dfa_subset.py  regex_thompson.py
lr1_app/backend/app/utils/: graphviz.py  tables.py
lr1_app/backend/lr1_project/: README.md  pyproject.toml  run_all_inputs.py
lr1_app/backend/lr1_project/grammar/: expr.txt
lr1_app/backend/lr1_project/src/lr1/: ast.py  cli.py  grammar_io.py  parser.py  tables.py
lr1_app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
lr1_app/frontend/src/: App.tsx  index.css  main.tsx
lr1_app/frontend/src/components/: DataTable.tsx  GrammarPanel.tsx  RegexPanel.tsx
lr1_app/frontend/src/lib/: api.ts
lr1_project/: README.md  debug_recursion.py  test_first_follow.py
lr1_project/src/lr1/: __init__.py  builder.py  grammar.py  grammar_io.py  items.py  lexer.py
